--- a/RazorPagesMovie/appsettings.json
+++ b/RazorPagesMovie/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RazorPagesMovieContext": "Server=(localdb)\\mssqllocaldb;Database=RazorPagesMovieContext-e1c98663-375d-4769-bf8d-86deb22cb442;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
